infrastructure/vault/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${infranamespaceprefix}vault
  labels:
    istio.io/rev: stable
    name: ${infranamespaceprefix}vault
