infrastructure/vault/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "strict"
  namespace: "${infranamespaceprefix}vault"
spec:
  mtls:
    mode: "STRICT"
